objects/Account_Billing_Info_Line__c.object
<CustomObject>
    <description>When creating an Account Billing Info object, these are the individual lines pertaining to the billing info. For example, a Credit Memo may have a Credit Memo Line and should use this object.</description>
    <fields>
        <fullName>Account_Billing_Info__c</fullName>
        <description>The Account Billing Info record to which this line is related</description>
        <inlineHelpText>The Account Billing Info record to which this line is related</inlineHelpText>
        <label>Account Billing Info</label>
        <referenceTo>Account_Billing_Info__c</referenceTo>
        <relationshipName>Account_Billing_Info_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Quantity__c  *  Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Line Item</description>
        <inlineHelpText>Description of the Line Item</inlineHelpText>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date</description>
        <inlineHelpText>End Date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>Item Product if related.</description>
        <inlineHelpText>Item Product if related.</inlineHelpText>
        <label>Item</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <description>Free Text Memo</description>
        <inlineHelpText>Free Text Memo</inlineHelpText>
        <label>Memo</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Item</label>
        <referenceTo>Order_Line_Item__c</referenceTo>
        <relationshipLabel>Credit Memo Lines</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Represents how many occurrences of the description this represents</description>
        <inlineHelpText>Represents how many occurrences of the description this represents</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>Per Unit Rate</description>
        <inlineHelpText>Per Unit Rate</inlineHelpText>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date</description>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <description>Unit of Measure</description>
        <inlineHelpText>Unit of Measure</inlineHelpText>
        <label>UOM</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <description>Description of the Unit</description>
        <inlineHelpText>Description of the Unit</inlineHelpText>
        <label>Units</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Credit Memo Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Units__c</columns>
        <columns>Item__c</columns>
        <columns>Description__c</columns>
        <columns>Memo__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Quantity__c</columns>
        <columns>UOM__c</columns>
        <columns>Rate__c</columns>
        <columns>Amount__c</columns>
        <columns>Order_Line_Item__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Line_Item__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Document Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Memo Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>